Make parametrizable api calls with path
